Fixed popup sizing on mobile

--- a/src/styles/components/popup.css
+++ b/src/styles/components/popup.css
@@ -20,9 +20,15 @@
   transform: translate(-50%, -50%);
   left: 50%;
   z-index: 9999;
-  width: 50%;
+  width: 80%;
   padding: 24px;
   min-height: 200px;
+}
+
+@media (min-width: 768px) {
+  .popup {
+    width: 50%;
+  }
 }
 
 .popup h2 {
